# lowbit-math-reasoning

./: README.md  main.py  pyproject.toml  vastai-setup_uv.sh
eval/: chat_cli.py  gsm8k-eval.py  math500-eval.py  mymath_verify.py
outputs/: gsm8k_eval_qwen3.5-9b-GPTQ-INT8.jsonl.summary.json  gsm8k_eval_qwen3.5-9b.jsonl.summary.json  math500_Qwen2.5-7B-Instruct.jsonl.summary.json  math500_Qwen3.5-9B.jsonl.summary.json
quantization/: pyproject.toml
scripts/: gsm8k-eval.py  gsm8k-eval_20251208.py  math500-eval.py  math500-eval_20260308.py  mymath_verify_math500.py  quantize_qwen35_9b_gptq.py
