[project]
name = "llm-eval"
version = "0.1.0"
description = "LLM Eval Pipeline"
requires-python = ">=3.10,<3.12"

# 共通依存
dependencies = [
    "accelerate",
    "datasets",
    "peft",
    "bitsandbytes",
    "sentencepiece",
    "evaluate",
    # wandb 0.22.3+ supports newer W&B API key formats and works with NumPy 2.x.
    "wandb==0.22.3",
    "tiktoken",
    "scikit-learn",
    "numpy",
    "einops",
    "setuptools",
    "sympy",
    "unsloth",
    "gptqmodel>=5.7.0",
    "optimum>=2.1.0",
]

# グループ依存（uv の新仕様）
[dependency-groups]
# SFT: 今後 SFT専用をここに追加
sft = [
]

# GRPO / RL / 推論
grpo = [
]

# 評価系（math-verify 等）
eval = [
    "transformers @ git+https://github.com/huggingface/transformers.git@v4.57.6",
    "vllm==0.17.0",
]

# 開発用
dev = [
    "pytest",
    "ipykernel",
]
